improve contacts preview UI
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/src/main/res/layout/item_custom_outcoming_preview_message.xml
+++ b/app/src/main/res/layout/item_custom_outcoming_preview_message.xml
@@ -3,6 +3,8 @@
   ~
   ~ @author Mario Danic
   ~ @author Marcel Hibbe
+  ~ @author Andy Scherzinger
+  ~ Copyright (C) 2021 Andy Scherzinger <info@andy-scherzinger.de>
   ~ Copyright (C) 2017-2018 Mario Danic <mario@lovelyhq.com>
   ~ Copyright (C) 2021 Marcel Hibbe <dev@mhibbe.de>
   ~
@@ -22,33 +24,36 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginStart="16dp"
     android:layout_marginTop="2dp"
-    android:layout_marginEnd="16dp"
+    android:layout_marginEnd="14dp"
     android:layout_marginBottom="2dp">
 
     <com.google.android.flexbox.FlexboxLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
         android:orientation="vertical"
-        android:layout_alignParentEnd="true"
         app:alignContent="stretch"
         app:alignItems="stretch"
         app:flexWrap="wrap"
         app:justifyContent="flex_end">
 
         <FrameLayout
+            android:id="@+id/preview_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_flexGrow="1"
-            app:layout_wrapBefore="true"
+            android:layout_marginStart="2dp"
+            android:layout_marginEnd="2dp"
+            android:adjustViewBounds="true"
             app:layout_alignSelf="flex_start"
-            android:adjustViewBounds="true">
+            app:layout_flexGrow="1"
+            app:layout_wrapBefore="true">
 
             <!-- SimpleDraweeView does not support wrap_content for layout_width or layout_height attributes! -->
             <com.facebook.drawee.view.SimpleDraweeView
@@ -67,15 +72,81 @@
                 android:visibility="gone" />
         </FrameLayout>
 
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/contact_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="2dp"
+            app:layout_alignSelf="flex_start"
+            app:layout_flexGrow="1"
+            app:layout_wrapBefore="true"
+            app:strokeWidth="0dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="@dimen/standard_padding">
+
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true">
+
+                    <!-- SimpleDraweeView does not support wrap_content for layout_width or layout_height attributes! -->
+                    <com.facebook.drawee.view.SimpleDraweeView
+                        android:id="@+id/contact_photo"
+                        android:layout_width="@dimen/small_item_height"
+                        android:layout_height="@dimen/small_item_height"
+                        android:scaleType="fitStart"
+                        app:roundAsCircle="true"
+                        tools:src="@drawable/ic_call_black_24dp" />
+
+                    <ProgressBar
+                        android:id="@+id/contact_progress_bar"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:visibility="gone"
+                        tools:visibility="visible" />
+                </FrameLayout>
+
+                <androidx.emoji.widget.EmojiTextView
+                    android:id="@+id/contact_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:autoLink="none"
+                    android:ellipsize="middle"
+                    android:gravity="center_vertical"
+                    android:maxLines="3"
+                    android:paddingStart="@dimen/standard_padding"
+                    android:paddingEnd="0dp"
+                    android:textColor="@color/high_emphasis_text"
+                    android:textColorLink="@color/high_emphasis_text"
+                    android:textIsSelectable="false"
+                    android:textSize="16sp"
+                    app:layout_alignSelf="flex_start"
+                    app:layout_flexGrow="1"
+                    app:layout_wrapBefore="true"
+                    tools:text="Charlotte D. Meyerheimers" />
+
+            </LinearLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
         <androidx.emoji.widget.EmojiTextView
             android:id="@id/messageText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="2dp"
             android:autoLink="none"
             android:textColor="@color/warm_grey_four"
             android:textColorLink="@color/warm_grey_four"
             android:textIsSelectable="true"
             android:textSize="12sp"
+            android:visibility="invisible"
             app:layout_alignSelf="flex_start"
             app:layout_flexGrow="1"
             app:layout_wrapBefore="true"
@@ -87,9 +158,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="8dp"
+            android:layout_marginEnd="2dp"
             android:textColor="@color/warm_grey_four"
             app:layout_alignSelf="center"
-            tools:text="12:34:56" />
+            tools:text="12:34" />
     </com.google.android.flexbox.FlexboxLayout>
 
 </RelativeLayout>
