--- a/app/src/main/res/layout/item_custom_incoming_preview_message.xml
+++ b/app/src/main/res/layout/item_custom_incoming_preview_message.xml
@@ -3,6 +3,8 @@
   ~
   ~ @author Mario Danic
   ~ @author Marcel Hibbe
+  ~ @author Andy Scherzinger
+  ~ Copyright (C) 2021 Andy Scherzinger <info@andy-scherzinger.de>
   ~ Copyright (C) 2017-2018 Mario Danic <mario@lovelyhq.com>
   ~ Copyright (C) 2021 Marcel Hibbe <dev@mhibbe.de>
   ~
@@ -22,12 +24,12 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginStart="16dp"
     android:layout_marginTop="2dp"
-    android:layout_marginEnd="16dp"
+    android:layout_marginEnd="14dp"
     android:layout_marginBottom="2dp">
 
     <com.facebook.drawee.view.SimpleDraweeView
@@ -35,7 +37,7 @@
         android:layout_width="24dp"
         android:layout_height="24dp"
         android:layout_alignParentTop="true"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="6dp"
         app:roundAsCircle="true" />
 
     <com.google.android.flexbox.FlexboxLayout
@@ -51,12 +53,16 @@
         app:justifyContent="flex_end">
 
         <FrameLayout
+            android:id="@+id/preview_container"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="2dp"
+            android:layout_marginEnd="2dp"
+            android:adjustViewBounds="true"
+            app:layout_alignSelf="flex_start"
             app:layout_flexGrow="1"
             app:layout_wrapBefore="true"
-            app:layout_alignSelf="flex_start"
-            android:adjustViewBounds="true">
+            tools:visibility="gone">
 
             <!-- SimpleDraweeView does not support wrap_content for layout_width or layout_height attributes! -->
             <com.facebook.drawee.view.SimpleDraweeView
@@ -75,10 +81,76 @@
                 android:visibility="gone" />
         </FrameLayout>
 
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/contact_container"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="2dp"
+            android:layout_marginBottom="1dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="2dp"
+            app:layout_alignSelf="flex_start"
+            app:layout_flexGrow="1"
+            app:layout_wrapBefore="true"
+            app:strokeWidth="0dp">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="@dimen/standard_padding">
+
+                <FrameLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true">
+
+                    <!-- SimpleDraweeView does not support wrap_content for layout_width or layout_height attributes! -->
+                    <com.facebook.drawee.view.SimpleDraweeView
+                        android:id="@+id/contact_photo"
+                        android:layout_width="@dimen/small_item_height"
+                        android:layout_height="@dimen/small_item_height"
+                        android:scaleType="fitStart"
+                        app:roundAsCircle="true"
+                        tools:src="@drawable/ic_call_black_24dp" />
+
+                    <ProgressBar
+                        android:id="@+id/contact_progress_bar"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:visibility="gone"
+                        tools:visibility="visible" />
+                </FrameLayout>
+
+                <androidx.emoji.widget.EmojiTextView
+                    android:id="@+id/contact_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:autoLink="none"
+                    android:ellipsize="middle"
+                    android:gravity="center_vertical"
+                    android:maxLines="3"
+                    android:paddingStart="@dimen/standard_padding"
+                    android:paddingEnd="0dp"
+                    android:textColor="@color/high_emphasis_text"
+                    android:textColorLink="@color/high_emphasis_text"
+                    android:textIsSelectable="false"
+                    android:textSize="16sp"
+                    app:layout_alignSelf="flex_start"
+                    app:layout_flexGrow="1"
+                    app:layout_wrapBefore="true"
+                    tools:text="Charlotte D. Meyerheimers" />
+
+            </LinearLayout>
+
+        </com.google.android.material.card.MaterialCardView>
+
         <androidx.emoji.widget.EmojiTextView
             android:id="@id/messageText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="2dp"
             android:autoLink="none"
             android:textColor="@color/warm_grey_four"
             android:textColorLink="@color/warm_grey_four"
@@ -86,7 +158,8 @@
             android:textSize="12sp"
             app:layout_alignSelf="flex_start"
             app:layout_flexGrow="1"
-            app:layout_wrapBefore="true" />
+            app:layout_wrapBefore="true"
+            tools:text="A simple message" />
 
         <TextView
             android:id="@id/messageTime"
@@ -94,8 +167,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="8dp"
+            android:layout_marginEnd="2dp"
             android:textColor="@color/warm_grey_four"
-            app:layout_alignSelf="center" />
+            app:layout_alignSelf="center"
+            tools:text="12:38" />
     </com.google.android.flexbox.FlexboxLayout>
 
 </RelativeLayout>
