set seekbar default style
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/src/main/res/layout/item_custom_incoming_voice_message.xml
+++ b/app/src/main/res/layout/item_custom_incoming_voice_message.xml
@@ -104,9 +104,9 @@
 
                         <SeekBar
                             android:id="@+id/seekbar"
-                            style="@style/Nextcloud.Material.Incoming.SeekBar"
                             android:layout_width="200dp"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            tools:progress="50" />
 
                 </LinearLayout>
 
