set seekbar default style
Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -40,6 +40,8 @@
         <item name="android:actionMenuTextAppearance">@style/menuTextAppearance</item>
         <item name="searchViewStyle">@style/SearchView</item>
         <item name="android:navigationBarColor">@color/bg_default</item>
+        <item name="android:seekBarStyle">@style/Nextcloud.Material.Incoming.SeekBar</item>
+        <item name="seekBarStyle">@style/Nextcloud.Material.Incoming.SeekBar</item>
     </style>
 
     <style name="CallTheme" parent="AppTheme">
