improve the ripple effect for the buttons

--- a/app/src/main/res/layout/item_custom_outcoming_voice_message.xml
+++ b/app/src/main/res/layout/item_custom_outcoming_voice_message.xml
@@ -69,6 +69,7 @@
                 android:layout_height="48dp"
                 android:contentDescription="@string/play_voice_message"
                 android:visibility="visible"
+                app:rippleColor="#1FFFFFFF"
                 app:cornerRadius="@dimen/button_corner_radius"
                 app:icon="@drawable/ic_baseline_play_arrow_voice_message_24"
                 app:iconSize="40dp"
@@ -81,6 +82,7 @@
                 android:layout_height="48dp"
                 android:contentDescription="@string/pause_voice_message"
                 android:visibility="gone"
+                app:rippleColor="#1FFFFFFF"
                 app:cornerRadius="@dimen/button_corner_radius"
                 app:icon="@drawable/ic_baseline_pause_voice_message_24"
                 app:iconSize="40dp"
