fix spinner color for outgoing voice messages
Signed-off-by: Marcel Hibbe <dev@mhibbe.de>

--- a/app/src/main/res/layout/item_custom_outcoming_voice_message.xml
+++ b/app/src/main/res/layout/item_custom_outcoming_voice_message.xml
@@ -60,7 +60,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:progressTint="@color/fontAppbar"
-                android:visibility="gone"/>
+                android:visibility="gone"
+                android:indeterminateTint="@color/nc_outcoming_text_default"/>
 
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/playPauseBtn"
