--- a/app/src/main/res/layout/item_custom_outcoming_voice_message.xml
+++ b/app/src/main/res/layout/item_custom_outcoming_voice_message.xml
@@ -49,7 +49,7 @@
             android:visibility="gone" />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center_vertical">
@@ -79,7 +79,7 @@
             <SeekBar
                 android:id="@+id/seekbar"
                 style="@style/Nextcloud.Material.Outgoing.SeekBar"
-                android:layout_width="200dp"
+                android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:thumb="@drawable/voice_message_outgoing_seek_bar_slider"
                 tools:progress="50" />
