--- a/app/src/qa/res/values/setup.xml
+++ b/app/src/qa/res/values/setup.xml
@@ -20,6 +20,7 @@
   -->
 
 <resources>
-    <string name="nc_app_name">Nextcloud Talk QA</string>
+    <string name="nc_app_name">Talk QA</string>
+    <string name="nc_app_product_name">Nextcloud Talk QA</string>
     <string name="nc_server_product_name">Nextcloud</string>
 </resources>
