--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -141,7 +141,7 @@
             app:navigationIconTint="@color/fontAppbar"
             app:popupTheme="@style/appActionBarPopupMenu"
             app:titleTextColor="@color/fontAppbar"
-            tools:title="@string/nc_app_name">
+            tools:title="@string/nc_app_product_name">
 
             <ProgressBar
                 android:id="@+id/toolbarProgressBar"
