--- a/app/src/main/res/values/setup.xml
+++ b/app/src/main/res/values/setup.xml
@@ -25,7 +25,8 @@
     <string name="nc_talk_login_scheme" translatable="false">nc</string>
     <bool name="nc_is_debug">false</bool>
 
-    <string name="nc_app_name">Nextcloud Talk</string>
+    <string name="nc_app_name">Talk</string>
+    <string name="nc_app_product_name">Nextcloud Talk</string>
     <string name="nc_server_product_name">Nextcloud</string>
 
     <string name="nc_push_server_url" translatable="false">https://push-notifications.nextcloud.com</string>
