- set bottom margin for grid for voicecall - temporarily comment out setOnTouchListener for grid (disables toggle of controls for now) - set android:scrollbars="vertical" for gridview - add callControlsHeight for item height calculation - add fake height to item that scrolling is testable
Signed-off-by: Marcel Hibbe <dev@mhibbe.de>

--- a/app/src/main/res/layout/controller_call.xml
+++ b/app/src/main/res/layout/controller_call.xml
@@ -52,6 +52,8 @@
                 android:gravity="center"
                 android:stretchMode="columnWidth"
                 android:numColumns="2"
+                android:scrollbars="vertical"
+                android:background="#fff000"
                 />
 
             <FrameLayout
