--- a/app/src/main/res/layout/call_item.xml
+++ b/app/src/main/res/layout/call_item.xml
@@ -24,6 +24,7 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relative_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -50,7 +51,8 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="6dp"
         android:layout_marginStart="10dp"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/white"
+        tools:text="Bill Murray"/>
 
     <ImageView
         android:id="@+id/remote_audio_off"
@@ -62,6 +64,7 @@
         android:layout_toEndOf="@id/peer_nick_text_view"
         android:src="@drawable/ic_mic_off_white_24px"
         android:contentDescription="@string/nc_remote_audio_off"
-        android:visibility="invisible" />
+        android:visibility="invisible"
+        tools:visibility="visible"/>
 
 </RelativeLayout>
