--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -57,4 +57,6 @@
     <dimen name="standard_half_padding">8dp</dimen>
     <dimen name="standard_half_margin">8dp</dimen>
     <dimen name="default_login_width">400dp</dimen>
+
+    <dimen name="call_grid_item_min_height">180dp</dimen>
 </resources>
