--- a/app/src/main/res/layout/call_item.xml
+++ b/app/src/main/res/layout/call_item.xml
@@ -51,8 +51,11 @@
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="6dp"
         android:layout_marginStart="10dp"
+        android:ellipsize="end"
+        android:maxEms="8"
+        android:maxLines="1"
         android:textColor="@android:color/white"
-        tools:text="Bill Murray"/>
+        tools:text="Bill Murray 12345678901234567890"/>
 
     <ImageView
         android:id="@+id/remote_audio_off"
