Add order capabilities to file browser
Resolves #919

Signed-off-by: Andy Scherzinger <info@andy-scherzinger.de>

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -27,6 +27,7 @@
     <color name="colorPrimary">#0082C9</color>
     <color name="colorPrimaryDark">#006AA3</color>
     <color name="colorAccent">@color/colorPrimary</color>
+    <color name="disabled_text">#ff6F6F6F</color>
 
     <!-- App bar -->
     <color name="appbar">#1E1E1E</color>
